noinst_LIBRARIES = libsofa_c.a

libsofa_c_a_SOURCES = a2af.c d2dtf.c fame03.c jd2cal.c pn00a.c rv2m.c \
taiutc.c a2tf.c d2tf.c fane03.c jdcalf.c pn00b.c rx.c tcbtdb.c af2a.c \
dat.c faom03.c num00a.c pn00.c rxp.c tcgtt.c anp.c dtdb.c fapa03.c    \
num00b.c pn06a.c rxpv.c tdbtcb.c anpm.c dtf2d.c fasa03.c num06a.c     \
pn06.c rxr.c tdbtt.c bi00.c ee00a.c faur03.c numat.c pn.c ry.c tf2a.c \
bp00.c ee00b.c fave03.c nut00a.c pnm00a.c rz.c tf2d.c bp06.c ee00.c   \
fk52h.c nut00b.c pnm00b.c s00a.c tr.c bpn2xy.c ee06a.c fk5hip.c	      \
nut06a.c pnm06a.c s00b.c trxp.c c2i00a.c eect00.c fk5hz.c nut80.c     \
pnm80.c s00.c trxpv.c c2i00b.c eform.c fw2m.c nutm80.c pom00.c s06a.c \
t_sofa_c.c c2i06a.c eo06a.c fw2xy.c obl06.c ppp.c s06.c tttai.c	      \
c2ibpn.c eors.c gc2gd.c obl80.c ppsp.c s2c.c tttcg.c c2ixy.c epb2jd.c \
gc2gde.c p06e.c pr00.c s2p.c tttdb.c c2ixys.c epb.c gd2gc.c p2pv.c    \
prec76.c s2pv.c ttut1.c c2s.c epj2jd.c gd2gce.c p2s.c pv2p.c s2xpv.c  \
ut1tai.c c2t00a.c epj.c gmst00.c pap.c pv2s.c sepp.c ut1tt.c c2t00b.c \
epv00.c gmst06.c pas.c pvdpv.c seps.c ut1utc.c c2t06a.c eqeq94.c      \
gmst82.c pb06.c pvm.c sofa.h utctai.c c2tcio.c era00.c gst00a.c pdp.c \
pvmpv.c sofam.h utcut1.c c2teqx.c fad03.c gst00b.c pfw06.c pvppv.c    \
sp00.c xy06.c c2tpe.c fae03.c gst06a.c plan94.c pvstar.c starpm.c     \
xys00a.c c2txy.c faf03.c gst06.c pmat00.c pvu.c starpv.c xys00b.c     \
cal2jd.c faju03.c gst94.c pmat06.c pvup.c sxp.c xys06a.c cp.c fal03.c \
h2fk5.c pmat76.c pvxpv.c sxpv.c zp.c cpv.c falp03.c hfk5z.c pm.c      \
pxp.c taitt.c zpv.c cr.c fama03.c ir.c pmp.c rm2v.c taiut1.c zr.c
